updated the title and main text about me.

--- a/about.html
+++ b/about.html
@@ -30,10 +30,21 @@
     </nav>
   </header>
   <main class=about>
-    <h1>About me</h1>
+    <h1>This is about Hamed Gharibdoost:</h1>
     <img src="img/about-picture.jpg" alt="A picture about me!" class="about-picture">
-    <p>My name is Hamed Gharibdoost. I am studying Full-Stack Web Development at careerfoundry.
-      I have already worked in engineering and science and have experience in programming.
+    <p>I am Full-Stack Web Developer based in Karlsruhe, Germany.</p>
+    <p>
+      From a young age, I enjoyed solving logical and number sequence puzzles.
+      When most kids were playing with gaming consoles, I was learning the basics of programming on my 8-bit home computer,
+      Commodore 64. during my studies in science, I learned deep physics and mathematics as well as so many
+      skills that use them in my work and in everyday life.
+      Analythical thinking, problem solving, self-study are some of them.
+      During years of study and research in science, I discovered my strong interest in software developing
+      and broadened my knowledge in the field. The process that I never get tired of. Learning and learning and learning.
+      Now, I am working in my beloved field, as a full-stack web developer freelancer. My free time belongs to Learning
+      new skills, hanging out with friends and my artistic hobies in making jweleries and carving wooden figures.
+    </p>
+    <p>
       The web development is very interesting and this is what I enjoy doing:
     </p>
     <ul>
