--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     </nav>
   </header>
   <main class=contact>
-    <h1>Contact</h1>
+    <h1>Contact Hamed Gharibdoost</h1>
     <br>
     Tel <a href="tel:+4917697581638"> Call me on +49(0)176-975 81638</a><br>
     Skype <a href="skype:hamed.ghd"> hamed.ghd</a><br>
