--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   <main  class="profile">
     <img src="img/Hamed-photo.jpg" class="profile__portrait" alt="Hamed Portrait" >
     <h1>Hello World!</h1>
-    <p>My name is Hamed Gharibdoost. I am a web developer living in Germany.</p>
+    <p>My name is Hamed Gharibdoost. I am a web developer based in Karlsruhe, Germany.</p>
     <br>
-    <a href="#" class="my-link" id="my-link">Check out some of my code.</a>
+    <a href="work.html" class="my-link" id="my-link">Check out some of my code.</a>
     <br>
   </main>
   <br>
