--- a/work.html
+++ b/work.html
@@ -31,7 +31,7 @@
   </header>
   <!-- Main content -->
   <section class=work>
-    <h1>Work</h1>
+    <h1>What I have been working on:</h1>
     <div class="grid">
       <div class="grid__item">
         <h2>Mobile web app</h2>
