edited text and added button style

--- a/contact.html
+++ b/contact.html
@@ -32,14 +32,14 @@
   <main class=contact>
     <h1>Contact Hamed Gharibdoost</h1>
     <br>
-    Skype <a href="skype:hamed.ghd"> hamed.ghd</a><br>
-    <a href="mailto:h.gharibdoost@gmail.com">h.gharibdoost@gmail.com</a>
+    Skype:<a href="skype:hamed.ghd"> hamed.ghd</a><br>
+    Email:<a href="mailto:h.gharibdoost@gmail.com">h.gharibdoost@gmail.com</a>
     <h2>You can also send me an email using the contact form below.</h2><br>
     <div class=contact-form>
       <form action="#" method="post">
-        <label class="standard-label" for="contact-fname">First Name</label><br>
+        <label class="standard-label" for="contact-fname">First Name:</label><br>
         <input type="text" id="contact-fname" name="firstname" placeholder="Your name.."><br>
-        <label class="standard-label" for="contact-lname">Last Name</label><br>
+        <label class="standard-label" for="contact-lname">Last Name:</label><br>
         <input type="text" id="contact-lname" name="lastname" placeholder="Your name.."><br>
         <label class="standard-label" for="contact-email">E-mail: </label><br>
         <input type="email" id="contact-email" name="email" placeholder="Your email address.." required><br>
@@ -48,7 +48,7 @@
         <input type="tel" id="contact-tel" name="tel" placeholder="+4911122222222" required><br>
         <label class="standard-label" for="contact-message">Message: </label><br>
         <textarea id="contact-message" maxlength="240" required></textarea><br>
-        <input type="submit" value="Send message"><br>
+        <input type="submit" value="Send message" class="button"><br>
       </form>
     </div>
   </main>
