removed class from the link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <h1>Hello World!</h1>
     <p>My name is Hamed Gharibdoost. I am a web developer based in Karlsruhe, Germany.</p>
     <br>
-    <a href="work.html" class="my-link" id="my-link">Check out some of my code.</a>
+    <a href="work.html" id="my-link">Check out some of my code.</a>
     <br>
   </main>
   <br>
